Fixing chat message size on mobile

--- a/labs/meteor-client/app/client/stylesheets/portrait/chat.less
+++ b/labs/meteor-client/app/client/stylesheets/portrait/chat.less
@@ -10,12 +10,10 @@
 
   @media (max-device-aspect-ratio: 1/1) {
     .chat {
+      /* height: Xpx; the value here will determine how tall we allow the chat */ 
       li {
         td {
           font-size: 30px;
-        }
-        div {
-          font-size: 15px;
         }
       }
     }
